// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.25s;
  transition-duration: 0.25s;
  -webkit-transition-timing-function: cubic-bezier(.2,.8,.4,1);
  transition-timing-function: cubic-bezier(.2,.8,.4,1);
}

.emotion-0:visited {
  color: #903D91;
}

.emotion-0:hover {
  color: #2F75D7;
}

.emotion-0:active {
  color: #2F75D7;
}

<a
    class="emotion-0"
    href="#"
  >
    test link test
  </a>
</DocumentFragment>
`;

exports[`Link renders correctly with $noUnderline property 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.25s;
  transition-duration: 0.25s;
  -webkit-transition-timing-function: cubic-bezier(.2,.8,.4,1);
  transition-timing-function: cubic-bezier(.2,.8,.4,1);
}

.emotion-0:visited {
  color: #903D91;
}

.emotion-0:hover {
  color: #2F75D7;
}

.emotion-0:active {
  color: #2F75D7;
}

<a
    class="emotion-0"
    href="#"
  >
    test link text
  </a>
</DocumentFragment>
`;
